# opencode-multi

./: Cargo.toml  PLAN.md  README.md
src/: cli.rs  config.rs  errors.rs  main.rs  profile.rs  utils.rs
src/commands/: clone.rs  create.rs  doctor.rs  list.rs  mod.rs  remove.rs  run.rs  show.rs
tests/: integration_tests.rs
